# piantala

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
docker/: bootstrap_admin.py  entrypoint.sh
piantala/: __init__.py  admin.py  auth.py  config.py  extensions.py  forms.py  home_assistant.py  mailing.py  main.py  media.py  models.py  site_context.py  translations.py  utils.py
piantala.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
piantala/static/css/: app.css
piantala/static/js/: app.js
piantala/templates/: _admin_menu.html  _audit_meta.html  access_settings.html  activity_form.html  activity_type_form.html  activity_types.html  admin_environment.html  admin_index.html  admin_storage.html  admin_upload_inventory.html  base.html  cultivation_type_form.html  cultivation_type_image_form.html  cultivation_type_usage.html  cultivation_type_variant_form.html  cultivation_type_variants.html  cultivation_types.html  entity_form.html  external_link_form.html  home_assistant_settings.html  invite_accept.html  irrigation_zone_form.html  link_type_form.html  link_types.html  login.html  manage_cultivation_positions.html  map.html  map_settings.html  marker_color_form.html  marker_colors.html  mdi_icon_usage.html  mdi_icons.html  node_detail.html  node_form.html  node_image_edit_form.html  photo_form.html  photo_import_form.html  profile_form.html  register.html  translations.html  (+2 more)
scripts/: export_docker_data.sh  import_local_data.sh  update_docker.sh
