[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "piantala"
version = "0.5.1"
description = "Flask garden management app with map-based navigation, roles, and plant records."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Flask>=3.0.3",
  "Flask-Login>=0.6.3",
  "Flask-SQLAlchemy>=3.1.1",
  "Flask-WTF>=1.2.1",
  "python-dotenv>=1.0.1",
  "email-validator>=2.1.1",
  "Pillow>=11.0.0",
  "gunicorn>=23.0.0",
]

[tool.setuptools]
packages = ["piantala"]
